// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Notifications Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iqcFkW sc-hHLeRK dzJWYl"
    >
      <div
        class="react-notification-root sc-hZFzCs cLlYed"
      >
        <div
          class="notification-container-top-left"
        />
        <div
          class="notification-container-top-right"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
                >
                  
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                  >
                    This is a notification
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
                >
                  
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                  >
                    <div
                      class="sc-gKXOVf QRSBg sc-iBkjds ipRjux"
                    >
                      <div
                        class="sc-fLlhyt gAlhfr sc-bBrHrO jNwxdu"
                      >
                        Some text for the user to read
                      </div>
                      <button
                        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR kAoSkv"
                        type="button"
                      >
                        This is a button
                      </button>
                    </div>
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="notification-container-bottom-left"
        />
        <div
          class="notification-container-bottom-right"
        />
        <div
          class="notification-container-top-center"
        />
        <div
          class="notification-container-center"
        >
          <div
            class="center-inner"
          />
        </div>
        <div
          class="notification-container-bottom-center"
        />
      </div>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        Add text notification
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        Add button notification
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Notifications Positioning 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="react-notification-root sc-hZFzCs cLlYed"
    >
      <div
        class="notification-container-top-left"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                >
                  top-left
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-top-right"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                >
                  top-right
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-left"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                >
                  bottom-left
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-right"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                >
                  bottom-right
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-top-center"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                >
                  top-center
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-center"
      >
        <div
          class="center-inner"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 10ms height;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
                >
                  
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                  >
                    center
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="notification-container-bottom-center"
      >
        <div
          class="notification-parent"
          style="height: 0px; width: 300px; transition: 10ms height;"
        >
          <div
            class="notification-item n-child"
          >
            <div
              class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK sc-dmRaPn iKIurY gdKzWA sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
            >
              
              <div
                class="sc-gKXOVf ckXSHX sc-iBkjds ipRjux"
              >
                
                <span
                  class="sc-fLlhyt gAlhfr sc-ivTmOn fbiySe"
                >
                  bottom-center
                </span>
              </div>
              <button
                aria-label="Dismiss Alert"
                class="StyledButton-sc-323bzc-0 iFDLDn sc-breuTD sc-bjUoiL Krizp dANmhT sc-dIouRR kAoSkv sc-kgflAQ fJDjHk"
                title="Dismiss Alert"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-xmark "
                  data-icon="xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 320 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds hnToDo sc-hHLeRK fDtTuc"
    >
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY"
      >
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          top-left
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          top-center
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          top-right
        </button>
      </div>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        center
      </button>
      <div
        class="sc-gKXOVf QRSBg sc-iBkjds ipRjux sc-hHLeRK iKIurY"
      >
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          bottom-left
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          bottom-center
        </button>
        <button
          class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
          type="button"
        >
          bottom-right
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Notifications Types 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds iqcFkW sc-hHLeRK dzJWYl"
    >
      <div
        class="react-notification-root sc-hZFzCs cLlYed"
      >
        <div
          class="notification-container-top-left"
        />
        <div
          class="notification-container-top-right"
        >
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds dnRYSM sc-hHLeRK sc-dmRaPn iKIurY FGhRa sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                <div
                  class="sc-fLlhyt gAlhfr sc-bBrHrO iNQEwe"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-lightbulb "
                    data-icon="lightbulb"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M112.1 454.3c0 6.297 1.816 12.44 5.284 17.69l17.14 25.69c5.25 7.875 17.17 14.28 26.64 14.28h61.67c9.438 0 21.36-6.401 26.61-14.28l17.08-25.68c2.938-4.438 5.348-12.37 5.348-17.7L272 415.1h-160L112.1 454.3zM191.4 .0132C89.44 .3257 16 82.97 16 175.1c0 44.38 16.44 84.84 43.56 115.8c16.53 18.84 42.34 58.23 52.22 91.45c.0313 .25 .0938 .5166 .125 .7823h160.2c.0313-.2656 .0938-.5166 .125-.7823c9.875-33.22 35.69-72.61 52.22-91.45C351.6 260.8 368 220.4 368 175.1C368 78.61 288.9-.2837 191.4 .0132zM192 96.01c-44.13 0-80 35.89-80 79.1C112 184.8 104.8 192 96 192S80 184.8 80 176c0-61.76 50.25-111.1 112-111.1c8.844 0 16 7.159 16 16S200.8 96.01 192 96.01z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds tsoYt"
                >
                  <span
                    class="sc-fLlhyt iYlmke sc-ivTmOn ixflud"
                  >
                    Note!
                  </span>
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn irBlAP"
                  >
                    info
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR ftKnur sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds gdzJDO sc-hHLeRK sc-dmRaPn iKIurY kIPQvp sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                <div
                  class="sc-fLlhyt gAlhfr sc-bBrHrO lmsBdk"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-triangle-exclamation "
                    data-icon="triangle-exclamation"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M506.3 417l-213.3-364c-16.33-28-57.54-28-73.98 0l-213.2 364C-10.59 444.9 9.849 480 42.74 480h426.6C502.1 480 522.6 445 506.3 417zM232 168c0-13.25 10.75-24 24-24S280 154.8 280 168v128c0 13.25-10.75 24-23.1 24S232 309.3 232 296V168zM256 416c-17.36 0-31.44-14.08-31.44-31.44c0-17.36 14.07-31.44 31.44-31.44s31.44 14.08 31.44 31.44C287.4 401.9 273.4 416 256 416z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds gurykB"
                >
                  <span
                    class="sc-fLlhyt iYlmke sc-ivTmOn ixflud"
                  >
                    Warning!
                  </span>
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn hiZSRD"
                  >
                    warning
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR jKabsr sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds gwVQPy sc-hHLeRK sc-dmRaPn iKIurY blUbwm sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                <div
                  class="sc-fLlhyt gAlhfr sc-bBrHrO ddiZCg"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-check "
                    data-icon="circle-check"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM371.8 211.8C382.7 200.9 382.7 183.1 371.8 172.2C360.9 161.3 343.1 161.3 332.2 172.2L224 280.4L179.8 236.2C168.9 225.3 151.1 225.3 140.2 236.2C129.3 247.1 129.3 264.9 140.2 275.8L204.2 339.8C215.1 350.7 232.9 350.7 243.8 339.8L371.8 211.8z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds jAkInX"
                >
                  <span
                    class="sc-fLlhyt iYlmke sc-ivTmOn ixflud"
                  >
                    Success!
                  </span>
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn whyyV"
                  >
                    success
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR cbTNTl sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="notification-parent"
            style="height: 0px; width: 300px; transition: 200ms height linear 0ms;"
          >
            <div
              class="notification-item n-child"
            >
              <div
                class="sc-gKXOVf QRSBg sc-iBkjds gDBmYX sc-hHLeRK sc-dmRaPn iKIurY jrmdGN sc-llJcti hQwFFc sc-dSuTWQ iQzoGr"
              >
                <div
                  class="sc-gKXOVf ckXSHX sc-iBkjds iAZiqN"
                >
                  <span
                    class="sc-fLlhyt iYlmke sc-ivTmOn ixflud"
                  >
                    <span
                      class="sc-fLlhyt gAlhfr sc-ivTmOn kaQlf"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-ban "
                        data-icon="ban"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM99.5 144.8C77.15 176.1 64 214.5 64 256C64 362 149.1 448 256 448C297.5 448 335.9 434.9 367.2 412.5L99.5 144.8zM448 256C448 149.1 362 64 256 64C214.5 64 176.1 77.15 144.8 99.5L412.5 367.2C434.9 335.9 448 297.5 448 256V256z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span
                      class="sc-fLlhyt gAlhfr sc-ivTmOn ghimrz"
                    >
                      Error!
                    </span>
                  </span>
                  <span
                    class="sc-fLlhyt gAlhfr sc-ivTmOn eKlMrj"
                  >
                    danger
                  </span>
                </div>
                <button
                  aria-label="Dismiss Alert"
                  class="StyledButton-sc-323bzc-0 eXTxNK sc-breuTD sc-bjUoiL Krizp gOoGXe sc-dIouRR hllURX sc-kgflAQ fJDjHk"
                  title="Dismiss Alert"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-xmark "
                    data-icon="xmark"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 320 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="notification-container-bottom-left"
        />
        <div
          class="notification-container-bottom-right"
        />
        <div
          class="notification-container-top-center"
        />
        <div
          class="notification-container-center"
        >
          <div
            class="center-inner"
          />
        </div>
        <div
          class="notification-container-bottom-center"
        />
      </div>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        danger
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        success
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        warning
      </button>
      <button
        class="StyledButton-sc-323bzc-0 feSBMv sc-breuTD sc-hAZoDl Krizp gjEvOJ sc-dIouRR itaVlc"
        type="button"
      >
        info
      </button>
    </div>
  </div>
</div>
`;
